<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/opMode"
        android:defaultValue="1"
        android:dialogTitle="Choose operation mode"
        android:title="Mode" />

    <EditTextPreference
        android:key="@string/btLatencyMs"
        android:inputType="number"
        android:dialogTitle="Choose sleep interval (ms)"
        android:title="BT on transmit sleep interval" />

    <EditTextPreference
        android:key="@string/bt2NetFactor"
        android:inputType="number"
        android:dialogTitle="Choose BT2NET factor"
        android:title="BT2NET factor" />

    <CheckBoxPreference
        android:key="@string/btSinglePacket"
        android:defaultValue="false"
        android:summary="Try not to buff BT data"
        android:title="No bufferization on BT" />

    <ListPreference
        android:key="@string/audioCodecType"
        android:defaultValue="1"
        android:dialogTitle="Choose audiocodec"
        android:title="Audiocodec" />

</PreferenceScreen>