<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/baseView"
    android:layout_margin="1dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ContactList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/ip_info_margin"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="8dp"
                android:text="@string/label_abonent"
                android:textColor="@color/colorWhite"/>

            <include layout="@layout/view_contacts" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnGreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="#006633"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <Space
                android:layout_width="32dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnRed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="#CC0000"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnChangeDevice"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/label_buttonChDevice"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewBtInTraffic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textViewBtOutTraffic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textViewNetInTraffic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textViewNetOutTraffic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:visibility="gone"/>

        </LinearLayout>

        <ExpandableListView
            android:id="@+id/gatt_services_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <include layout="@layout/view_contact_editor" />

    <LinearLayout
        android:id="@+id/scanView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/AvailDevices"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#008080"
                android:gravity="center"
                android:text="@string/label_list_devices"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/listDevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite">
        </ListView>
        <!---->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical">-->


        <!--</LinearLayout>-->

    </LinearLayout>

</FrameLayout>